user-apps/media/nodecast-tv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodecast-tv
  labels:
    app: nodecast-tv
spec:
  selector:
    app: nodecast-tv
  ports:
    - name: http
      port: 3000
      targetPort: 3000
