user-apps/media/nodecast-tv/http-route-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nodecast-tv-external
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
  hostnames:
    - "tv.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: nodecast-tv
          namespace: nodecast-tv
          port: 3000
